# verge-auth

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
verge-auth/: middleware.py
verge_auth.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
