[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verge-auth"
version = "0.1.1"
description = "Plug-and-play centralized authentication SDK for FastAPI microservices"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  { name = "Verge Infosoft", email = "contactus@vergeinfosoft.com" }
]

dependencies = [
  "fastapi",
  "httpx"
]
